--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Rollswan\\LaravelProjectUpdater\\UpdaterServiceProvider"
+                "Rollswan\\LaravelProjectUpdater\\Providers\\UpdaterServiceProvider"
             ]
         }
     },
